--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 
     <script>
       var swiper = new Swiper(".mySwiper", {
+        autoplay: {
+          delay: 5000,
+        },
         slidesPerView: "auto",
         spaceBetween: 62,
       });
